--- a/src/main/resources/templates/BaseballTeamList.html
+++ b/src/main/resources/templates/BaseballTeamList.html
@@ -1,3 +1,4 @@
+<!-- NasenallTeamList.html -->
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -7,5 +8,10 @@
 </head>
 <body>
     <h1>野球チーム一覧</h1>
+    <span th:each="item:${teamList}">
+        <a href="">
+            <span th:text="${item.team_name}">input here</span>
+        </a><br><br>
+    </span>
 </body>
 </html>
