--- a/src/main/resources/templates/BaseballTeamDetail.html
+++ b/src/main/resources/templates/BaseballTeamDetail.html
@@ -17,7 +17,15 @@
     <p th:text="${teamDetail.inauguration}"></p>
     
     <h3>歴史</h3>
-    <p th:text="${teamDetail.history}"></p>
+    <!-- 
+        historyの改行がthymeleafでは無視されるため、その対策を実施。
+        「↓」で区切った「リスト」を作成し、その要素を1つずつ出力。
+        参考：https://www.thymeleaf.org/doc/tutorials/3.1/usingthymeleaf_ja.html#%E6%96%87%E5%AD%97%E5%88%97 
+    -->
+    <div th:each="line, status : ${#strings.listSplit(teamDetail.history, '↓')}">
+        <p><span th:text="${line}"></span></p>
+        <p><span th:unless="${status.last}">↓</span></p>
+    </div>
 
     <form th:action="@{/}">
         <button>戻る</button>
